Implemnatndo local storage y pestaña gastos fijos

--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "^7.0.3",
     "@ionic/angular": "^8.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "chart.js": "^4.5.0",
     "ionicons": "^7.0.0",
     "ng2-charts": "^8.0.0",
+    "pdf-parse": "^1.1.1",
+    "pdf-ts": "^0.0.2",
+    "pdfjs-dist": "^5.4.149",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -48,6 +52,7 @@
     "@capacitor/cli": "7.4.3",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/pdfjs-dist": "^2.10.377",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
